# ezotema-bot

./: .dockerignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  run.py  supervisord.conf
src/: config.py
src/alembic/: env.py
src/alembic/versions/: 2024_10_19_2055-fd257dfa9c96_create_tables.py  2024_10_19_2146-1e8a20b1faaa_create_tables.py
src/main/bot/: app.py
src/main/bot/fsm/: course_states.py  payment_states.py
src/main/bot/handlers/: __init__.py  commands.py  email.py  payment.py  payment_callback.py  step_1.py  step_1_2.py  step_2.py  step_3.py  step_4.py  step_5.py  step_6.py  step_7.py  step_8.py  step_9.py  test.py
src/main/bot/keyboards/: main.py
src/main/bot/middlewares/: __init__.py  courses.py  promo_code_validation.py  subscription_check.py  users.py
src/main/bot/validators/: email_validator.py
src/main/db/crud/: course.py  users.py
src/main/db/models/: __init__.py  base.py  courses.py  files.py  users.py
src/main/db/schemas/: courses.py  files.py  users.py
src/main/utils/: backoff.py  db_helper.py  payment.py  template.py
src/resources/json/: gifts.json  images.json  price_list.json
src/resources/templates/: 10_1_step.html  10_step.html  1_step.html  2_step.html  3_step.html  4_1_step.html  4_step.html  5_step.html  6_step.html  7_step.html  8_step.html  9_step.html  check_payment.html  email.html  membership_subscription.html  offer.html  passed_payment.html  subscription.html  succeeded_payment.html
src/test/: pytest.ini
src/test/bot/: test_handlers.py
